remove index comments & hr on food titles

--- a/index.html
+++ b/index.html
@@ -98,50 +98,43 @@
     </header>
     <!-- header -->
 
-    <!-- Start slider  -->
+    <!-- slider  -->
     <section id="gp-slider">
         <div class="gp-slider-area">
 
-            <!-- Top slider -->
             <div class="gp-top-slider">
 
                 <div class="gp-top-slider-single">
                     <img src="assets/img/slider/1.jpg" alt="img">
-                    <!-- Top slider content -->
                     <div class="gp-top-slider-content">
                         <span class="gp-slider-small-title">Bun venit!</span>
                         <h2 class="gp-slider-title">La noua pizzerie din ora&#351;ul Craiova.</h2>
                         <p>Viziteaz&#259;-ne sau sun&#259; la unul din numerele de telefon.</p>
                     </div>
-                    <!-- / Top slider content -->
                 </div>
 
                 <div class="gp-top-slider-single">
                     <img src="assets/img/slider/2.jpg" alt="img">
-                    <!-- Top slider content -->
                     <div class="gp-top-slider-content">
                         <span class="gp-slider-small-title">Garden</span>
                         <h2 class="gp-slider-title">O loca&#355;ie retras&#259; &#238;n afara ora&#351;ului.</h2>
                         <p>Vino s&#259; savurezi preparatele noastre &#238;ntr-un mediu relaxant.</p>
                     </div>
-                    <!-- / Top slider content -->
                 </div>
 
                 <div class="gp-top-slider-single">
                     <img src="assets/img/slider/3.jpg" alt="img">
-                    <!-- Top slider content -->
                     <div class="gp-top-slider-content">
                         <span class="gp-slider-small-title">Pizza</span>
                         <h2 class="gp-slider-title">Un meniu diversificat &#351;i delicios.</h2>
                         <p>Alege pizza, paste, piadine, salate sau unul din platouri.</p>
                     </div>
-                    <!-- / Top slider content -->
                 </div>
 
             </div>
         </div>
     </section>
-    <!-- End slider  -->
+    <!-- slider  -->
 
     <section id="cook-delecious">
         <div class="container">
@@ -209,7 +202,7 @@
             </div>
     </section>
 
-    <!-- Start About us -->
+    <!-- about us -->
     <section id="gp-about-us">
         <div class="container">
             <div class="row">
@@ -235,7 +228,7 @@
             </div>
         </div>
     </section>
-    <!-- End About us -->
+    <!-- about us -->
 
     <section id="gp-counter">
         <div class="gp-counter-overlay">
@@ -255,8 +248,7 @@
         </div>
     </section>
 
-
-    <!-- Start Restaurant Menu -->
+    <!-- menu -->
     <section id="gp-menu">
         <div class="container">
             <div class="row">
@@ -547,7 +539,7 @@
             </div>
         </div>
     </section>
-    <!-- End Restaurant Menu -->
+    <!-- menu -->
 
     <section id="gp-gallery">
         <div class="container">
@@ -555,10 +547,9 @@
                 <div class="col-md-12">
                     <div class="gp-gallery-area">
 
-                        <!-- Start gallery image -->
                         <div class="gp-gallery-content">
                             <div class="gp-gallery-body">
-                                <!-- start single gallery image -->
+
                                 <div class="gp-single-gallery col-md-4">
                                     <div class="gp-single-gallery-item">
                                         <figure class="gp-single-gallery-img">
@@ -572,9 +563,7 @@
                                         </figure>
                                     </div>
                                 </div>
-                                <!-- End single gallery image -->
 
-                                <!-- start single gallery image -->
                                 <div class="gp-single-gallery col-md-4">
                                     <div class="gp-single-gallery-item">
                                         <figure class="gp-single-gallery-img">
@@ -588,9 +577,7 @@
                                         </figure>
                                     </div>
                                 </div>
-                                <!-- End single gallery image -->
 
-                                <!-- start single gallery image -->
                                 <div class="gp-single-gallery col-md-4">
                                     <div class="gp-single-gallery-item">
                                         <figure class="gp-single-gallery-img">
@@ -604,9 +591,7 @@
                                         </figure>
                                     </div>
                                 </div>
-                                <!-- End single gallery image -->
 
-                                <!-- start single gallery image -->
                                 <div class="gp-single-gallery col-md-4">
                                     <div class="gp-single-gallery-item">
                                         <figure class="gp-single-gallery-img">
@@ -620,9 +605,7 @@
                                         </figure>
                                     </div>
                                 </div>
-                                <!-- End single gallery image -->
 
-                                <!-- start single gallery image -->
                                 <div class="gp-single-gallery col-md-4">
                                     <div class="gp-single-gallery-item">
                                         <figure class="gp-single-gallery-img">
@@ -636,9 +619,7 @@
                                         </figure>
                                     </div>
                                 </div>
-                                <!-- End single gallery image -->
 
-                                <!-- start single gallery image -->
                                 <div class="gp-single-gallery col-md-4">
                                     <div class="gp-single-gallery-item">
                                         <figure class="gp-single-gallery-img">
@@ -652,7 +633,6 @@
                                         </figure>
                                     </div>
                                 </div>
-                                <!-- End single gallery image -->
 
                             </div>
                         </div>
