--- a/meniu/piadine.html
+++ b/meniu/piadine.html
@@ -185,7 +185,7 @@
         $.getJSON("../data/piadine.json", function (data) {
             var html = '';
             html += '<div class="gp-menu-title">';
-            html += '<hr class="hr-text" data-content="Piadine">';
+            html += '<h1>Piadine</h1>';
             html += '</div>';
             $.each(data, function (index, value) {
                 html += '<div class="row gp-menu-row">';
