--- a/meniu/salate.html
+++ b/meniu/salate.html
@@ -185,7 +185,7 @@
         $.getJSON("../data/salate.json", function (data) {
             var html = '';
             html += '<div class="gp-menu-title">';
-            html += '<hr class="hr-text" data-content="Salate">';
+            html += '<h1>Salate</h1>';
             html += '</div>';
             $.each(data, function (index, value) {
                 html += '<div class="row gp-menu-row">';
