menius & format numbers

--- a/index.html
+++ b/index.html
@@ -177,20 +177,17 @@
 
                                             <a href="tel: +40724770007" class="gp-hover"><span
                                                     class="fa fa-phone contact-phone"></span>
-                                                0724 77
-                                                00 07</a>
+                                                0724 77 00 07</a>
                                         </div>
                                         <div class="contact-content">
                                             <a href="tel: +40767074848" class="gp-hover"><span
                                                     class="fa fa-phone contact-phone"></span>
-                                                0767 07
-                                                48 48</a>
+                                                0767 07 48 48</a>
                                         </div>
                                         <div class="contact-content">
                                             <a href="tel: +40745506699" class="gp-hover"><span
                                                     class="fa fa-phone contact-phone"></span>
-                                                0745 50
-                                                66 99</a>
+                                                0745 50 66 99</a>
                                         </div>
                                         <h4 class="we-send">
                                             <i class="fa fa-taxi"></i>
@@ -680,12 +677,9 @@
                             </div>
                             <div class="col-md-4 column-footer">
                                 <h2 style="font-weight: bold;">Contact</h2>
-                                <p><a href="tel: +40724770007" class="gp-shadow"><span class="fa fa-phone"></span> 0724
-                                        77 00 07</a></p>
-                                <p><a href="tel: +40767074848" class="gp-shadow"><span class="fa fa-phone"></span> 0767
-                                        07 48 48</a></p>
-                                <p><a href="tel: +40745506699" class="gp-shadow"><span class="fa fa-phone"></span> 0745
-                                        50 66 99</a></p>
+                                <p><a href="tel: +40724770007" class="gp-shadow"><span class="fa fa-phone"></span> 0724 77 00 07</a></p>
+                                <p><a href="tel: +40767074848" class="gp-shadow"><span class="fa fa-phone"></span> 0767 07 48 48</a></p>
+                                <p><a href="tel: +40745506699" class="gp-shadow"><span class="fa fa-phone"></span> 0745 50 66 99</a></p>
                                 <p>contact@gardenpizza.ro</p>
                                 <!-- <p><span class="fa fa-envelope-o"></span> contact@gardenpizza.ro</p> -->
                             </div>
