--- a/meniu/platouri.html
+++ b/meniu/platouri.html
@@ -129,12 +129,9 @@
                             </div>
                             <div class="col-md-4 column-footer">
                                 <h2 style="font-weight: bold;">Contact</h2>
-                                <p><a href="tel: +40724770007" class="gp-shadow"><span class="fa fa-phone"></span> 0724
-                                        77 00 07</a></p>
-                                <p><a href="tel: +40767074848" class="gp-shadow"><span class="fa fa-phone"></span> 0767
-                                        07 48 48</a></p>
-                                <p><a href="tel: +40745506699" class="gp-shadow"><span class="fa fa-phone"></span> 0745
-                                        50 66 99</a></p>
+                                <p><a href="tel: +40724770007" class="gp-shadow"><span class="fa fa-phone"></span> 0724 77 00 07</a></p>
+                                <p><a href="tel: +40767074848" class="gp-shadow"><span class="fa fa-phone"></span> 0767 07 48 48</a></p>
+                                <p><a href="tel: +40745506699" class="gp-shadow"><span class="fa fa-phone"></span> 0745 50 66 99</a></p>
                                 <p>contact@gardenpizza.ro</p>
                                 <!-- <p><span class="fa fa-envelope-o"></span> contact@gardenpizza.ro</p> -->
                             </div>
