--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul id="top-menu" class="nav navbar-nav navbar-right gp-main-nav">
 
-                        <li class="navbar-item-lg"><a href="meniu/zilei.html">Meniul Zilei</a></li>
+                        <!-- <li class="navbar-item-lg"><a href="meniu/zilei.html">Meniul Zilei</a></li> -->
                         <li class="navbar-item-lg"><a href="meniu/pizza.html">Pizza</a></li>
                         <li class="navbar-item-lg">
                             <div class="gp-dropdown">
@@ -87,7 +87,7 @@
                         <li class="navbar-item-md gp-switch"><a href="meniu/desert.html">Desert</a></li>
                         <li class="navbar-item-md gp-switch"><a href="meniu/platouri.html">Platouri</a></li>
                         <li class="navbar-item-md gp-switch" id="mobile-call"><a>Sun&#259;-ne</a></li>
-                        <li class="navbar-item-md gp-switch-tel"><a href="meniu/zilei.html">Meniul Zilei</a></li>
+                        <!-- <li class="navbar-item-md gp-switch-tel"><a href="meniu/zilei.html">Meniul Zilei</a></li> -->
                         <li class="navbar-item-md gp-switch-tel" id="mobile-menu"><a>Meniu</a></li>
                         <li class="navbar-item-md gp-switch-tel"><a href="despre.html">Despre</a></li>
                         <li class="navbar-item-md gp-switch-tel"><a href="tel: +40790531313">0790 53 13 13</a></li>
@@ -107,29 +107,29 @@
             <div class="gp-top-slider">
 
                 <div class="gp-top-slider-single">
-                    <img src="assets/img/slider/1.jpg" alt="img">
+                    <img src="assets/img/slider/3.jpg" alt="img">
                     <div class="gp-top-slider-content">
-                        <span class="gp-slider-small-title">Bun venit!</span>
-                        <h2 class="gp-slider-title">La noua pizzerie din ora&#351;ul Craiova.</h2>
-                        <p>Viziteaz&#259;-ne sau sun&#259; la unul din numerele de telefon.</p>
+                        <span class="gp-slider-small-title">Sarbatori fericite!</span>
+                        <h2 class="gp-slider-title">Activitatea reîncepe după 15 februarie.</h2>
+                        <!-- <p>Viziteaz&#259;-ne sau sun&#259; la unul din numerele de telefon.</p> -->
                     </div>
                 </div>
 
                 <div class="gp-top-slider-single">
                     <img src="assets/img/slider/2.jpg" alt="img">
                     <div class="gp-top-slider-content">
-                        <span class="gp-slider-small-title">Garden</span>
-                        <h2 class="gp-slider-title">O loca&#355;ie retras&#259; &#238;n afara ora&#351;ului.</h2>
-                        <p>Vino s&#259; savurezi preparatele noastre &#238;ntr-un mediu relaxant.</p>
+                        <span class="gp-slider-small-title">Sarbatori fericite!</span>
+                        <h2 class="gp-slider-title">Activitatea reîncepe după 15 februarie.</h2>
+                        <!-- <p>Vino s&#259; savurezi preparatele noastre &#238;ntr-un mediu relaxant.</p> -->
                     </div>
                 </div>
 
                 <div class="gp-top-slider-single">
-                    <img src="assets/img/slider/3.jpg" alt="img">
+                    <img src="assets/img/slider/1.jpg" alt="img">
                     <div class="gp-top-slider-content">
-                        <span class="gp-slider-small-title">Pizza</span>
-                        <h2 class="gp-slider-title">Un meniu diversificat &#351;i delicios.</h2>
-                        <p>Alege pizza, paste, piadine, salate sau unul din platouri.</p>
+                        <span class="gp-slider-small-title">Sarbatori fericite!</span>
+                        <h2 class="gp-slider-title">Activitatea reîncepe după 15 februarie.</h2>
+                        <!-- <p>Alege pizza, paste, piadine, salate sau unul din platouri.</p> -->
                     </div>
                 </div>
 
@@ -138,7 +138,7 @@
     </section>
     <!-- slider  -->
 
-    <section class="gp-menu-wrapper" id="gp-daily-menu">
+    <!-- <section class="gp-menu-wrapper" id="gp-daily-menu">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -146,7 +146,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <section id="cook-delecious">
         <div class="container">
