--- a/index.html
+++ b/index.html
@@ -731,7 +731,7 @@
     <script>
         $.getJSON("data/meniu.json", function (data) {
             var html = '';
-            html += '<div class="gp-menu-title" style="margin-bottom: 0;">';
+            html += '<div class="gp-menu-title">';
             html += ' <h1 style="margin-bottom: 0;">Meniul Zilei</h1>';
             html += ' <h2 style="margin-bottom: 0; color: var(--gp-gray)">- ' + data[0].pret + ' lei -</h2>';
             html += '</div>';
