--- a/despre.html
+++ b/despre.html
@@ -109,7 +109,7 @@
     <!-- google map -->
 
     <!-- Start About us -->
-    <section id="gp-about-us" style="margin-top: -50px">
+    <section id="gp-about-us" style="margin-top: -50px; padding-bottom: 50px;">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -135,6 +135,13 @@
         </div>
     </section>
     <!-- End About us -->
+
+    <section id="gp-about-us" class="container text-center" style="padding: 0;">
+        <video width="576" height="324" controls controlsList="nodownload" style="border-radius: 16px;">
+            <source src="assets/vid/garden.mp4" type="video/mp4">
+            Browser-ul dvs. nu poate reda acest video.
+        </video>
+    </section>
 
     <section id="gp-gallery">
         <div class="container">
