--- a/index.html
+++ b/index.html
@@ -136,6 +136,16 @@
     </section>
     <!-- slider  -->
 
+    <iframe src="assets/ms/music.mp3" allow="autoplay" style="display: none">
+        Browser-ul dvs. nu poate reda sunetul de fundal.
+    </iframe>
+
+    <!-- <section class="text-center">
+        <audio src="assets/ms/music.mp3" autoplay controls loop="infinite">
+            Browser-ul dvs. nu poate reda audio.
+        </audio>
+    </section> -->
+
     <section class="gp-menu-wrapper" id="gp-daily-menu">
         <div class="container">
             <div class="row">
