--- a/despre.html
+++ b/despre.html
@@ -138,7 +138,7 @@
 
     <section id="gp-about-us" class="container text-center" style="padding: 0;">
         <video width="576" height="324" controls controlsList="nodownload" style="border-radius: 16px;">
-            <source src="assets/vid/garden.mp4" type="video/mp4">
+            <source src="assets/ms/garden.mp4" type="video/mp4">
             Browser-ul dvs. nu poate reda acest video.
         </video>
     </section>
