--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <!-- header -->
 
     <!-- slider  -->
-    <section id="gp-slider">
+    <section id="gp-slider" style="margin-bottom: 25px;">
         <div class="gp-slider-area">
 
             <div class="gp-top-slider">
@@ -136,6 +136,12 @@
     </section>
     <!-- slider  -->
 
+    <section>
+        <marquee direction="right" width="100%">
+            <img src="assets/pizza.gif" alt="Rolling pizza">
+        </marquee>
+    </section>
+
     <iframe src="assets/ms/music.mp3" allow="autoplay" style="display: none">
         Browser-ul dvs. nu poate reda sunetul de fundal.
     </iframe>
@@ -146,17 +152,7 @@
         </audio>
     </section> -->
 
-    <section class="gp-menu-wrapper" id="gp-daily-menu">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <div id="MeniuHTML"></div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section id="cook-delecious">
+    <section id="cook-delecious" style="margin-top: 25px;">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -685,9 +681,12 @@
                             </div>
                             <div class="col-md-4 column-footer">
                                 <h2 style="font-weight: bold;">Contact</h2>
-                                <p><a href="tel: +40790531313" class="gp-shadow"><span class="fa fa-phone"></span> 0790 53 13 13</a></p>
-                                <p><a href="tel: +40764194192" class="gp-shadow"><span class="fa fa-phone"></span> 0764 19 41 92</a></p>
-                                <p><a href="tel: +40745506699" class="gp-shadow"><span class="fa fa-phone"></span> 0745 50 66 99</a></p>
+                                <p><a href="tel: +40790531313" class="gp-shadow"><span class="fa fa-phone"></span> 0790
+                                        53 13 13</a></p>
+                                <p><a href="tel: +40764194192" class="gp-shadow"><span class="fa fa-phone"></span> 0764
+                                        19 41 92</a></p>
+                                <p><a href="tel: +40745506699" class="gp-shadow"><span class="fa fa-phone"></span> 0745
+                                        50 66 99</a></p>
                                 <p>contact@gardenpizza.ro</p>
                                 <!-- <p><span class="fa fa-envelope-o"></span> contact@gardenpizza.ro</p> -->
                             </div>
